// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests should match snapshot - default state 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#FBFBFD",
        "borderColor": "#26323833",
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "flex": 0.8,
            }
          }
        >
          <View
            style={
              {
                "padding": 10,
              }
            }
            testID="select-list"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="select-trigger"
            >
              <Text
                style={
                  [
                    {
                      "color": "#161F4C",
                      "fontSize": 14,
                    },
                    {
                      "color": "#999999",
                    },
                  ]
                }
                testID="select-value"
              >
                Select item
              </Text>
            </View>
            <View
              testID="select-items"
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-0"
              >
                <Text>
                  Option 1
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-1"
              >
                <Text>
                  Option 2
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-2"
              >
                <Text>
                  Option 3
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        testID="svg-icon-caret-down"
      >
        <Text>
          caret-down
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "height": 10,
        "width": undefined,
      }
    }
    testID="sized-box"
  />
</View>
`;

exports[`Snapshot Tests should match snapshot - multiple selection mode 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#FBFBFD",
        "borderColor": "#26323833",
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 12,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "marginBottom": 5,
          "opacity": 1,
          "transform": [
            {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <Text
        style={
          [
            undefined,
            {
              "color": "#161F4C",
            },
          ]
        }
      >
        Select Items
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "space-between",
          "marginTop": -5,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "flex": 0.8,
            }
          }
        >
          <View
            style={
              {
                "padding": 10,
              }
            }
            testID="select-list"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="select-trigger"
            >
              <Text
                style={
                  [
                    {
                      "color": "#161F4C",
                      "fontSize": 14,
                    },
                    {
                      "color": undefined,
                    },
                  ]
                }
                testID="select-value"
              >
                Option 1, Option 2
              </Text>
            </View>
            <View
              testID="select-items"
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-0"
              >
                <Text>
                  Option 1
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-1"
              >
                <Text>
                  Option 2
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-2"
              >
                <Text>
                  Option 3
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        testID="svg-icon-caret-down"
      >
        <Text>
          caret-down
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "height": 10,
        "width": undefined,
      }
    }
    testID="sized-box"
  />
</View>
`;

exports[`Snapshot Tests should match snapshot - with error 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#FBFBFD",
        "borderColor": "#26323833",
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "flex": 0.8,
            }
          }
        >
          <View
            style={
              {
                "padding": 10,
              }
            }
            testID="select-list"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="select-trigger"
            >
              <Text
                style={
                  [
                    {
                      "color": "#161F4C",
                      "fontSize": 14,
                    },
                    {
                      "color": "#999999",
                    },
                  ]
                }
                testID="select-value"
              >
                Select item
              </Text>
            </View>
            <View
              testID="select-items"
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-0"
              >
                <Text>
                  Option 1
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-1"
              >
                <Text>
                  Option 2
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-2"
              >
                <Text>
                  Option 3
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        testID="svg-icon-caret-down"
      >
        <Text>
          caret-down
        </Text>
      </View>
    </View>
  </View>
  <Text
    style={
      {
        "color": "red",
        "fontSize": 12,
        "marginTop": 5,
      }
    }
  >
    This field is required
  </Text>
  <View
    style={
      {
        "height": 10,
        "width": undefined,
      }
    }
    testID="sized-box"
  />
</View>
`;

exports[`Snapshot Tests should match snapshot - with icon and search 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#FBFBFD",
        "borderColor": "#26323833",
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "flex": 0.12,
            }
          }
        >
          <View
            testID="svg-icon-search"
          >
            <Text>
              search
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "flex": 0.8,
            }
          }
        >
          <View
            style={
              {
                "padding": 10,
              }
            }
            testID="select-list"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="select-trigger"
            >
              <Text
                style={
                  [
                    {
                      "color": "#161F4C",
                      "fontSize": 14,
                    },
                    {
                      "color": "#999999",
                    },
                  ]
                }
                testID="select-value"
              >
                Select item
              </Text>
            </View>
            <View
              testID="select-items"
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-0"
              >
                <Text>
                  Option 1
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-1"
              >
                <Text>
                  Option 2
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-2"
              >
                <Text>
                  Option 3
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        testID="svg-icon-caret-down"
      >
        <Text>
          caret-down
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "height": 10,
        "width": undefined,
      }
    }
    testID="sized-box"
  />
</View>
`;

exports[`Snapshot Tests should match snapshot - with value selected 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "#FBFBFD",
        "borderColor": "#26323833",
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 12,
      }
    }
  >
    <View
      collapsable={false}
      style={
        {
          "marginBottom": 5,
          "opacity": 1,
          "transform": [
            {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <Text
        style={
          [
            undefined,
            {
              "color": "#161F4C",
            },
          ]
        }
      >
        Select Label
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 45,
          "justifyContent": "space-between",
          "marginTop": -5,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "flex": 0.8,
            }
          }
        >
          <View
            style={
              {
                "padding": 10,
              }
            }
            testID="select-list"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="select-trigger"
            >
              <Text
                style={
                  [
                    {
                      "color": "#161F4C",
                      "fontSize": 14,
                    },
                    {
                      "color": undefined,
                    },
                  ]
                }
                testID="select-value"
              >
                Option 1
              </Text>
            </View>
            <View
              testID="select-items"
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-0"
              >
                <Text>
                  Option 1
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-1"
              >
                <Text>
                  Option 2
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "opacity": 1,
                  }
                }
                testID="select-item-2"
              >
                <Text>
                  Option 3
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        testID="svg-icon-caret-down"
      >
        <Text>
          caret-down
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "height": 10,
        "width": undefined,
      }
    }
    testID="sized-box"
  />
</View>
`;
